--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HUBD 後台管理系統</title>
   </head>
-  <body class="font-lexend">
-    <div id="root" class="w-full flex justify-center items-center gap-10 p-5" ></div>
+  <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
